--- a/index.css
+++ b/index.css
@@ -187,6 +187,15 @@ h4 {
     flex-shrink: 0;
 }
 
+#pfp-lineup {
+    width: 60px;
+    height: auto;
+    margin-bottom: -10px;
+    margin-left: -7.5px;
+    margin-right: -5px;
+    margin-top: -30px;
+}
+
 h5 {
     font-family: "Instrument Sans", sans-serif;
     font-optical-sizing: auto;
@@ -526,6 +535,22 @@ h5 {
 
     #alert {
         content: url("img/alert_black.png")
+    }
+
+    .line-one {
+        content: url("img/pfp_lineup1_black.png")
+    }
+
+    .line-two {
+        content: url("img/pfp_lineup2_black.png")
+    }
+
+    .line-three {
+        content: url("img/pfp_lineup3_black.png")
+    }
+
+    .line-four {
+        content: url("img/pfp_lineup4_black.png")
     }
 }
 
