--- a/inbox.css
+++ b/inbox.css
@@ -187,6 +187,15 @@ h4 {
     flex-shrink: 0;
 }
 
+#pfp-lineup {
+    width: 60px;
+    height: auto;
+    margin-bottom: -10px;
+    margin-left: -7.5px;
+    margin-right: -5px;
+    margin-top: -30px;
+}
+
 h5 {
     font-family: "Instrument Sans", sans-serif;
     font-optical-sizing: auto;
@@ -418,6 +427,14 @@ h5 {
         margin-right: 10px;
     }
 
+    #pfp-lineup {
+        width: 9.5vw;
+        height: auto;
+        margin-bottom: -1.25vw;
+        margin-left: -1.5vw;
+        margin-right: -0.5vw;
+    }
+
     h5 {
         font-size: 3vw;
         letter-spacing: 0.02vw;
@@ -526,6 +543,22 @@ h5 {
 
     #alert {
         content: url("img/alert_black.png")
+    }
+
+    .line-one {
+        content: url("img/pfp_lineup1_black.png")
+    }
+
+    .line-two {
+        content: url("img/pfp_lineup2_black.png")
+    }
+
+    .line-three {
+        content: url("img/pfp_lineup3_black.png")
+    }
+
+    .line-four {
+        content: url("img/pfp_lineup4_black.png")
     }
 }
 
