--- a/community.css
+++ b/community.css
@@ -175,16 +175,17 @@ h4 {
 }
 
 .box-content {
-    display: flex;
-    align-items: center;
+    display: block;
     padding: 22.5px 5px;
 }
 
-.box-content img {
-    width: 100px;
+#abbypfp, #davidpfp, #henrypfp {
+    float: left;
+    width: 80px;
     height: auto;
-    margin-right: 5px;
-    flex-shrink: 0;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
 
 h5 {
@@ -195,7 +196,27 @@ h5 {
     line-height: 24px;
     margin: 0;
     padding: 0px 20px 0px 0px;
-    flex-grow: 1; 
+    overflow: visible;
+}
+
+h5 > img, h5 input {
+    display: block;
+    float: none;
+    margin-left: 0;
+    margin-top: 15px;
+    width: calc(100% - 10px);
+    max-width: 100%;
+}
+
+.post-content {
+    clear: both;
+    padding-top: 5px;
+    margin-left: 20px;
+    width: 100%;
+}
+
+.post-image {
+    border-radius: 25px;
 }
 
 #water {
@@ -212,19 +233,21 @@ h5 {
     background-color: #E9E9E9;
 }
 
+.tag-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 4px;
+    margin-top: -5px;
+    margin-bottom: 10px;
+}
+
 #blue {
     display: inline-block;
     background-color: #282FFF;
     color: white;
     padding: 3px 12px;
     border-radius: 20px;
-    margin-bottom: -7.5px;
-    margin-top: 2px;
-    transition: all ease 0.3s;
-}
-
-#blue:hover {
-    text-decoration: underline;
 }
 
 #yellow {
@@ -233,13 +256,40 @@ h5 {
     color: black;
     padding: 3px 12px;
     border-radius: 20px;
-    margin-bottom: -7.5px;
-    margin-top: 2px;
-    transition: all ease 0.3s;
 }
 
-#yellow:hover {
-    text-decoration: underline;
+#red {
+    display: inline-block;
+    background-color: #d5221f;
+    color: white;
+    padding: 3px 12px;
+    border-radius: 20px;
+}
+
+#green {
+    display: inline-block;
+    background-color: #85d67b;
+    color: black;
+    padding: 3px 12px;
+    border-radius: 20px;
+}
+
+#reply {
+    font-family: "Instrument Sans", sans-serif;
+    font-size: 18px;
+    font-weight: 625;
+    letter-spacing: -0.25px;
+    display: block;
+    padding: 5px 10px;
+    background-color: #D9D9D9;
+    color: black;  
+    border: none;
+    border-radius: 10px;
+}
+
+#reply::placeholder {
+    color: #a2a2a2;
+    font-style: italic;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -501,6 +551,18 @@ h5 {
         background-color: rgb(18, 18, 18);
     }
 
+    #reply {
+        background-color: #3f3f3f;
+        color: white;  
+        border: none;
+        border-radius: 10px;
+    }
+    
+    #reply::placeholder {
+        color: #a2a2a2;
+        font-style: italic;
+    }
+
     #logo-icon {
         content: url("img/logo_black.png");
     }
@@ -526,7 +588,19 @@ h5 {
     }
 
     #alert {
-        content: url("img/alert_black.png")
+        content: url("img/alert_black.png");
+    }
+
+    #abbypfp {
+        content: url("img/abbypfp_black.png");
+    }
+
+    #davidpfp {
+        content: url("img/davidpfp_black.png");
+    }
+
+    #henrypfp {
+        content: url("img/henrypfp_black.png");
     }
 }
 
