--- a/map.css
+++ b/map.css
@@ -205,6 +205,7 @@ h5 {
     overflow: hidden;
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    touch-action: none;
 }
 
 .map-box {
@@ -213,10 +214,14 @@ h5 {
     height: auto;
     margin: 0;
     transform-origin: center;
-    transition: transform 0.1s ease-out;
+    transition: transform 0.05s cubic-bezier(0.23, 1, 0.32, 1);
     will-change: transform;
     box-shadow: none;
     border-radius: 0;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
 }
 
 .zoom-controls {
@@ -485,6 +490,9 @@ h5 {
 
     .map-box {
         content: url("img/map_portrait_white.jpg");
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
     }
 
     .box-container {
@@ -520,6 +528,7 @@ h5 {
         margin-right: 20px;
         width: calc(100% - 40px);
         border-radius: 20px;
+        -webkit-overflow-scrolling: touch;
     }
     
     .zoom-controls {
