--- a/community.css
+++ b/community.css
@@ -179,7 +179,7 @@ h4 {
     padding: 22.5px 5px;
 }
 
-#abbypfp, #davidpfp, #henrypfp {
+#abbypfp, #davidpfp, #henrypfp, #zhupfp, #danielpfp, #fernandopfp, #gabepfp, #ericapfp {
     float: left;
     width: 80px;
     height: auto;
@@ -216,7 +216,43 @@ h5 > img, h5 input {
 }
 
 .post-image {
+    height: 250px;
+    object-fit: cover;
+    width: 100%;
+    cursor: pointer;
     border-radius: 25px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    max-width: 90%;
+    max-height: 90%;
+    display: block;
+    margin: auto;
+    border-radius: 25px;
+}
+
+.close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 #water {
@@ -280,11 +316,11 @@ h5 > img, h5 input {
     font-weight: 625;
     letter-spacing: -0.25px;
     display: block;
-    padding: 5px 10px;
+    padding: 7.5px 0 7.5px 15px;
     background-color: #D9D9D9;
     color: black;  
     border: none;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 #reply::placeholder {
@@ -332,10 +368,6 @@ h5 > img, h5 input {
     .box-content {
         padding: 20px 10px;
     }
-
-    .box-content img {
-        width: 95px;
-    }
     
     .box {
         flex: 0 0 100%;
@@ -344,6 +376,14 @@ h5 > img, h5 input {
     h5 {
         font-size: 17px;
         line-height: 22px;
+    }
+    
+    .post-image {
+        height: 300px;
+        object-fit: cover;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
@@ -464,16 +504,12 @@ h5 > img, h5 input {
         padding: 4vw 2vw;
     }
 
-    .box-content img {
-        width: 15vw;
-        margin-right: 10px;
-    }
-
     h5 {
         font-size: 3vw;
         letter-spacing: 0.02vw;
         font-weight: 500;
         line-height: 3.75vw;
+        margin-left: 2.5px;
     }
 
     .box-container {
@@ -503,7 +539,26 @@ h5 > img, h5 input {
     .logo {
         display: none;
     }
-  }
+
+    .close {
+        top: 10px;
+        right: 15px;
+        font-size: 30px;
+    }
+    
+    .post-image {
+        width: 100%;
+        height: 200px;
+        max-width: none;
+        border-radius: 15px;
+    }
+    
+    .post-content {
+        margin-left: 10px;
+        margin-right: 0;
+        width: calc(100% - 10px);
+    }
+}
 
 @media (prefers-color-scheme: dark) {
     body {
@@ -602,10 +657,30 @@ h5 > img, h5 input {
     #henrypfp {
         content: url("img/henrypfp_black.png");
     }
+
+    #zhupfp {
+        content: url("img/zhupfp_black.png");
+    }
+
+    #danielpfp {
+        content: url("img/danielpfp_black.png");
+    }
+
+    #fernandopfp {
+        content: url("img/fernandopfp_black.png");
+    }
+
+    #gabepfp {
+        content: url("img/gabepfp_black.png");
+    }
+
+    #ericapfp {
+        content: url("img/ericapfp_black.png");
+    }
 }
 
 @media (prefers-color-scheme: light) {
     body {
-        background-color: white;;
+        background-color: white;
     }
 }
