--- a/community.css
+++ b/community.css
@@ -512,6 +512,12 @@ h5 > img, h5 input {
         margin-left: 2.5px;
     }
 
+    #reply {
+        font-size: 3vw;
+        border-radius: 2.5vw;
+        padding: 1.5vw 0 1.5vw 2.5vw;
+    }
+
     .box-container {
         margin-left: 20px;
         margin-right: 20px;
@@ -548,7 +554,7 @@ h5 > img, h5 input {
     
     .post-image {
         width: 100%;
-        height: 200px;
+        height: 50vw;
         max-width: none;
         border-radius: 15px;
     }
