--- a/settings.css
+++ b/settings.css
@@ -13,7 +13,7 @@ h1 {
     color: black;
 }
 
-hr {
+.line {
     height: 7.5px;
     border: none;
     background-color: #282FFF;
@@ -158,6 +158,7 @@ h4 {
     margin-right: 5vw;
     margin-top: 25px;
     gap: 20px;
+    flex-direction: column;
 }
 
 .box {
@@ -177,7 +178,7 @@ h4 {
 .box-content {
     display: flex;
     align-items: center;
-    padding: 22.5px 5px;
+    padding: 5px 0px;
 }
 
 .box-content img {
@@ -185,6 +186,22 @@ h4 {
     height: auto;
     margin-right: 5px;
     flex-shrink: 0;
+}
+
+.box-line {
+    height: 3px;
+    border: none;
+    background-color: #D9D9D9;
+    width: 100%;
+    margin: 15px 0;
+    box-sizing: border-box;
+}
+
+.box-content h2 {
+    width: 100%;
+    padding: 0 20px;
+    box-sizing: border-box;
+    margin: 15px 0;
 }
 
 h5 {
@@ -248,7 +265,7 @@ h5 {
         margin-left: 17.5vw;
     }
 
-    hr {
+    .line {
         margin-top: -75px;
         margin-left: 17.5vw;
     }
@@ -279,7 +296,7 @@ h5 {
     }
 
     .box-content {
-        padding: 20px 10px;
+        padding: 7.5px 0px;
     }
 
     .box-content img {
@@ -303,7 +320,7 @@ h5 {
         margin-top: 30px;
     }
 
-    hr {
+    .line {
         height: 1vw;
         margin-left: 20px;
         margin-right: 20px;
@@ -324,7 +341,7 @@ h5 {
     }
 
     h2 {
-        font-size: 6vw;
+        font-size: 5vw;
         letter-spacing: -0.1vw;
         font-weight: 600;
     }
@@ -410,7 +427,7 @@ h5 {
     }
 
     .box-content {
-        padding: 4vw 2vw;
+        padding: 0vw 0vw;
     }
 
     .box-content img {
@@ -463,7 +480,7 @@ h5 {
         color: white;
     }
 
-    hr {
+    .line {
         background-color: #FFC800;
     }
 
@@ -526,6 +543,10 @@ h5 {
 
     #alert {
         content: url("img/alert_black.png")
+    }
+
+    .box-line {
+        background-color: #3f3f3f;
     }
 }
 
